chore: use positioner_data instead of conf